# SPLITZ

./: .env.example  .gitignore  .replit  DEPLOYMENT_GUIDE.md  Dockerfile  Expense_Splitter_API.postman_collection.json  LOCAL_SETUP.md  README.md  api_routes.py  app.py  database.py  docker-compose.yml  init.sql  models.py  mongo_models.py  pyproject.toml  run_local.py  sample_data.py  settlement_calculator.py  setup_database.py  split_calculator.py  web_routes.py
attached_assets/: Pasted-Deliverables-Testing-Instructions-Public-Postman-Collection-Required-You-MUST-provide-a-public-1749469042661_1749469042663.txt  Pasted-Implement-comprehensive-expense-splitting-options-in-the-Split-App-with-the-following-exact-specific-1749468325120_1749468325125.txt  Pasted-MUST-HAVE-Features-Core-Requirements-1-Expense-Tracking-Add-new-expenses-with-amount-descr-1749467909642_1749467909644.txt  Pasted-You-are-tasked-with-building-a-production-ready-RESTful-backend-service-the-Split-App-that-enables-1749466461775_1749466461776.txt  Pasted-You-are-tasked-with-completing-a-production-ready-Expense-Splitter-API-with-full-testing-documentati-1749473138619_1749473138621.txt
static/: app.js  style.css
templates/: base.html  expenses.html  index.html  settlements.html
