[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-pymongo>=3.0.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pymongo>=4.13.0",
    "werkzeug>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.41",
]
